# AutoChessZK

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: chess.rs  instruction.rs  lib.rs  ranker.rs  types.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/guest/src/main/: main.rs
methods/guest/src/player/: main.rs
methods/main/: Cargo.toml
methods/main/src/: main.rs
rust-btoi/: Cargo.toml
