[workspace]
members = [
    "host",
    "methods",
    "core",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3
incremental = false

[profile.dev.build-override]
opt-level = 3
incremental = false

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
