[package]
name = "chess-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
risc0-zkvm = { version = "0.15.3", default-features = false }
risc0-zkvm-platform = { version = "0.15.3", default-features = false }
serde = { version = "1.0", default-features = false }
shakmaty = { version = "0.26.0", default-features = false }

# need to seperate host and guest features
[features]
default = ["guest"]
guest = []
