[package]
name = "chess-zkvm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
chess-core = { path = "../../core" }
risc0-zkvm = {workspace = true}

[workspace.dependencies]
risc0-zkvm = { version = "0.15.3", default-features = false }
chess-core = { path = "../../core" }

[patch.crates-io]
btoi = { path = "../../rust-btoi/" }

[[bin]]
name = "main"
path = "src/main/main.rs"

[[bin]]
name = "player"
path = "src/player/main.rs"
